--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My jquery basic assignment!</title>
     <meta class="author" content="Ivan Patricio Proaño">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 </head>
+<div class="container">
+    <div class="div1">
+
+        <h1>AddClass</h1>
+        <button>AddClass</button>
+        <p>Click the button to add class 'red' to this paragraph</p>
+
+    </div>
+    <div class="div2">
+        <h1>Slidetoggle</h1>
+        <button>Slidetoggle</button>
+        <p>Click the button to slidetoogle a hidden image</p>
+        <p>Ninja Show!</p>
+        <img class="image" src="ninja.jpg" alt="ninja-img">
+
+    </div>
+    <div class="div3">
+        <h1>Append</h1>
+        <button>Append</button>
+        <p>Click the button to append a new paragraph</p>
+
+    </div>
+    <div class="buttons-array">
+        <button id="showBtn">Show Buttons</button>
+        <div class="buttons">
+            <button id="newText">New Text</button>
+            <button id="fadeIn">Fade In</button>
+            <button id="before">Before</button>
+            <button id="after">After</button>
+            <button id="val">Value</button>
+            <button id="newDiv">New Div</button>
+            <p></p>
+            <h3 class="hidden">This is a hidden h3 element</h3>
+
+        </div>
+
+
+    </div>
+</div>
 
 <body>
 
